# Cosmos

./: .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  export_requirements_txt_from_poetry.sh  justfile  pyproject.toml  requirements.txt
cosmos/: app.py  main.py
cosmos/middlewares/: __init__.py  csrf_middleware.py  lg_cdn_middleware.py  request_id.py  request_logger.py
cosmos/schema/: lg_bei_info_schema.py
cosmos/services/: lg_bei_info.py
cosmos/utils/: constants.py  database.py  logging.py
cosmos/workflow/: airflow_pipeline.py
src/router/app/: auth.rs
templates/articles/intro/: body.md
templates/components/: footer.html  header.html
templates/views/: home.html
workflow/: workflow_jobs.py  workflow_type.py
